objects/TracHier__Territory_Member__c.object
<CustomObject>
    <fields>
        <fullName>TracHier__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Territory Memberships</relationshipLabel>
        <relationshipName>Territory_Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracHier__Territory_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Territory ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TracHier__Territory__c</fullName>
        <label>Territory</label>
        <referenceTo>TracHier__Territory__c</referenceTo>
        <relationshipLabel>Territory Members</relationshipLabel>
        <relationshipName>Territory_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Territory Member</label>
    <nameField>
        <label>Territory Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>